Bug 432056 - Pressing tilde affects multiple splits/views
Summary: Pressing tilde affects multiple splits/views
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: 19.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-24 21:54 UTC by Thomas Hunter II
Modified: 2021-01-30 09:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hunter II 2021-01-24 21:54:04 UTC
SUMMARY

When I have two views/splits open at the same time, pressing ~ with one split open will result in the character in the current split and the other open split to have the case changed.

STEPS TO REPRODUCE
1. Enable vim mode
2. Open two separate files in two splits, both visible at the same time
3. Place the cursor over a letter character in both splits
4. Press ~ with one of the splits focused

OBSERVED RESULT

The current character in both splits will have its case toggled.

EXPECTED RESULT

Only the character in the focused split should have its case toggled.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.10.4
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-01-30 04:07:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/96
Comment 2 Jan Paul Batrina 2021-01-30 09:29:57 UTC
Git commit befa12085f975658f2087a9f654443aa691d264f by Jan Paul Batrina.
Committed on 30/01/2021 at 09:29.
Pushed by cullmann into branch 'master'.

[Vimode] Do not switch view when changing case (~ command)

M  +0    -1    src/vimode/modes/normalvimode.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/befa12085f975658f2087a9f654443aa691d264f