[Vimode] Do not switch view when changing case (~ command)

BUG: 432056